--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -5,6 +5,7 @@
   text-transform: uppercase
   font-size: 0.93rem
   font-family: 'Futura Demi', sans-serif
+  font-weight: 500
   outline: none
   &:hover
     cursor: pointer
