--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -21,8 +21,13 @@
     justify-content: space-between
     max-width: 37.142rem
     margin: auto
+  &__label
+    font-weight: normal
   &__input
+    font-weight: normal
     margin-top: -0.2rem
+    &::placeholder
+      font-weight: normal
     &-group
       position: relative
       display: flex
@@ -35,6 +40,7 @@
   &__policy
     flex-basis: 100%
     margin-bottom: 3.6rem
+    font-weight: normal
     // font-size: 1.142rem
   &__button
     margin: auto
