--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -15,6 +15,7 @@
   color: $primary
   text-transform: uppercase
   font-family: 'Futura Demi', sans-serif
+  font-weight: 500
 .nav
   &__item
     color: $light
@@ -29,9 +30,10 @@
 .phone
   color: $primary
   font-family: 'Futura Demi', sans-serif
+  font-weight: 500
 .contacts
   &__phone
-    margin-right: 3.25rem
+    margin-right: 3rem
     margin-left: 1rem
   &__button
     padding: 11px 21px
