--- a/sass/templates/_team.sass
+++ b/sass/templates/_team.sass
@@ -17,6 +17,7 @@
     text-align: center
     font-size: 1.429rem
     line-height: 2.429rem
+    color: $darkText
     &::before
       content: ''
       display: block
@@ -41,7 +42,7 @@
       padding: 0
   &__row
     margin: 0 auto
-    max-width: 73.3rem
+    max-width: 73.2rem
     margin-bottom: 3.8rem
     justify-content: space-between
 .card
