--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -5,10 +5,11 @@ html
 body
   font-family: 'Futura Book', sans-serif
   font-size: 1rem
+  font-weight: normal
 img
   max-width: 100%
 .section
-  padding: 60px 0
+  padding: 4.286rem 0
   &--dark 
     background-color: $dark
     color: $light
@@ -20,6 +21,7 @@ img
       color: $light
     &__heading
       font-family: 'Yeseva One', cursive
+      font-weight: normal
       text-transform: uppercase
       font-size: 1.429rem
       line-height: 138.6%
@@ -27,6 +29,8 @@ img
       margin-bottom: 1rem
       &--primary
         color: $primary
+      &--black
+        color: $black
     &__word
       display: flex
       align-items: center
@@ -38,6 +42,7 @@ img
         margin-left: 2.43rem
     &__text
       font-size: 1.286rem
+      font-weight: normal
       line-height: 2.07rem
       max-width: 31.57rem
     &__image
