--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -1,7 +1,9 @@
 .control
+  margin-bottom: 1.85rem
   &__section-title
     margin-bottom: 2.214rem
     margin-top: -27.5rem
+    font-weight: normal
     padding-left: 0.5rem
   &__image
     img
@@ -25,10 +27,11 @@
   &__text
     max-width: 40rem
     margin: auto
-    margin-bottom: 4.55rem
+    margin-bottom: 4.2rem
     text-align: center
+    color: $darkText
     font-size: 1.428rem
-    line-height: 2.4285rem
+    line-height: 2.429rem
     &::before
       content: ''
       display: block
@@ -49,17 +52,24 @@
     display: flex
     flex-direction: column
     flex-basis: 30%
+    &:first-child
+      margin-right: 0.6rem      
   &__label
-    margin-bottom: -3.5px
+    color: rgba(54, 54, 54, 0.5)
+    margin-bottom: -4px
   &__input
     color: $darkText
+    &::placeholder
+      color: $darkText
   &__button
     padding: 1.23rem 4.25rem
     font-size: 1.071rem
-    box-shadow: 0px 15px 15px rgba(227, 184, 115, 0.15);
+    box-shadow: 0px 15px 15px rgba(227, 184, 115, 0.15)
+    font-weight: 500
   &__policy
     flex-basis: 100%
     margin-top: 1.1rem
+    color: $black
     &-label
       justify-content: center
 .video
