--- a/sass/templates/_design.sass
+++ b/sass/templates/_design.sass
@@ -1,7 +1,3 @@
-.card
-  &__pricetag
-    &--size-lg
-      padding: 1.214rem 5.5rem 1.214rem 2.4rem
 .design
   position: relative
   background: linear-gradient(to bottom, $light 52.5%, $dark 47.5%)
@@ -13,16 +9,34 @@
   //   width: 100%
   //   height: 52%
   //   background-color: $light
+  &__row
+    max-width: 88.286rem
+    margin-left: 0.9rem
   &__section-title
     position: relative
   &__card
     position: relative
   &__text
     max-width: 53.571rem
-    margin: 1.3rem auto 3.22rem auto
+    margin: 1.3rem auto 3.25rem auto
     text-align: center
     font-size: 1.429rem
     line-height: 1.929rem
+    color: $darkText
+  &-card
+    &__text
+      padding: 1.5rem 2.2rem
+    &__title
+      margin-bottom: 0.55rem
+    &__list
+      line-height: 1.857rem
+      margin-bottom: 2.6rem
+      .card__item:nth-child(n + 7)
+        line-height: 1.92rem
+    &__pricetag
+      padding: 1.214rem 5.4rem 1.214rem 2.4rem
+      &--lg
+        padding: 1.214rem 5.8rem 1.214rem 2.4rem
   
   
 
