--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -35,7 +35,7 @@
   &__text
     font-size: 1.57rem
     max-width: 500px
-    line-height: 135%
+    line-height: 2.143rem
     margin: 0
     margin-bottom: 3.3rem
   &__button
@@ -96,7 +96,7 @@
   font-family: 'Yeseva One', cursive
   text-transform: uppercase
   font-size: 2.857rem
-  line-height: 1.4
+  line-height: 3.786rem
   &--primary
     color: $primary
 .button
