--- a/sass/templates/_projects.sass
+++ b/sass/templates/_projects.sass
@@ -16,6 +16,7 @@
     &__heading
       font-size: 1.285rem
       line-height: 1.78rem
+      font-weight: normal
       font-family: 'Yeseva one', cursive
       color: $primary
       text-transform: uppercase
@@ -24,6 +25,7 @@
     &__value
       display: block
       font-size: 1.071rem
+      font-weight: normal
       line-height: 1.2rem
       &--margin
         margin-top: 0.3rem
@@ -52,6 +54,7 @@
     width: auto
     bottom: -1.05px
 .projects
+  padding-top: 8.95rem
   padding-bottom: 29.5rem
   &__row
     flex-direction: column
