--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -1,6 +1,9 @@
 .types
   &__section-title
-    margin-bottom: 2rem
+    margin-bottom: 2.15rem
+  &__row
+    max-width: 88.286rem
+    margin-left: 0.9rem
 .card
   &__text
     position: relative
@@ -8,21 +11,22 @@
     margin: 0 auto
     margin-top: -9.3rem
     background-color: $light
-    padding: 1.79rem 2.14rem
+    padding: 1.7rem 2.2rem
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03)
   &__title
     font-family: 'Yeseva One', cursive
     font-size: 1.29rem
+    color: $darkText
     line-height: 1.786rem
     margin-top: 0
-    margin-bottom: 0.7rem
+    margin-bottom: 0.4rem
   &__list
     padding: 0 0 0 1rem
     margin: 0
     font-size: 1.07rem
-    line-height: 1.82rem
+    line-height: 1.85rem
     color: $secondary
-    margin-bottom: 2.5rem
+    margin-bottom: 2.6rem
   &__pricetag
     position: absolute
     left: 0
@@ -34,5 +38,9 @@
     color: $light
     padding: 1.214rem 2.6rem
     box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.1)
+    &--lg
+      padding: 1.214rem 2.9rem
+    &--md
+      padding: 1.214rem 2.45rem
 
   
