--- a/sass/templates/_design.sass
+++ b/sass/templates/_design.sass
@@ -1,6 +1,7 @@
 .design
+  padding-bottom: 40rem
   position: relative
-  background: linear-gradient(to bottom, $light 52.5%, $dark 47.5%)
+  background: linear-gradient(to bottom, $light 34.5%, $dark 20%)
   // &::before
   //   content: ''
   //   position: absolute
