--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   src: url("../fonts/futura/FuturaBookC.woff") format("woff"), url("../fonts/futura/FuturaBookC.woff2") format("woff");
   font-weight: normal;
   font-style: normal;
-  font-display: wrap;
+  font-display: swap;
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   src: url("../fonts/futura/FuturaDemiC.woff") format("woff"), url("../fonts/futura/FuturaDemiC.woff2") format("woff");
   font-weight: normal;
   font-style: normal;
-  font-display: wrap;
+  font-display: swap;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -506,6 +506,10 @@ input.invalid {
   border: 2px solid #E3B873;
   border-radius: 50%;
   margin-left: 1rem;
+}
+
+::-moz-placeholder, :-moz-placeholder {
+  opacity: 1;
 }
 
 .container {
@@ -1378,6 +1382,9 @@ img {
 }
 
 .footer__map {
+  background: url("../img/yandex-before-load-marker.png") #ffffff no-repeat;
+  background-position: center center;
+  background-size: cover;
   margin-bottom: 3.85rem;
   width: 100%;
   max-width: 66.071rem;
@@ -1554,6 +1561,42 @@ img {
 
 .thanks__VK {
   color: #ffffff;
+}
+
+@-webkit-keyframes rotation {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
+@-webkit-keyframes blink {
+  from {
+    opacity: 0.5;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes blink {
+  from {
+    opacity: 0.5;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @media screen and (max-width: 1270px) {
@@ -1799,7 +1842,7 @@ img {
   }
   .card__experience {
     min-width: 19.416rem;
-    max-heiht: 3.666rem;
+    max-height: 3.666rem;
     font-size: 1.083rem;
     line-height: 1.666rem;
   }
@@ -2236,5 +2279,14 @@ img {
 @media screen and (max-height: 530px) {
   .hero__scroll-down {
     display: none;
+  }
+}
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .hero {
+    justify-content: flex-start;
+  }
+  .hero__scroll-down {
+    padding: 2.5rem 0;
   }
 }
