--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -107,4 +107,5 @@ input
       border: 2px solid $primary
       border-radius: 50%
       margin-left: 1rem
-
+::-moz-placeholder, :-moz-placeholder 
+    opacity: 1
