--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -55,6 +55,15 @@
     flex-direction: column
     align-items: center
   &__map
+    // position: relative;
+    // z-index: 7;
+    // width: 100%;
+    // height: 100%;
+    // cursor: pointer;
+    // background-color: transparent;
+    background: url('../img/yandex-before-load-marker.png') #ffffff no-repeat
+    background-position: center center
+    background-size: cover
     margin-bottom: 3.85rem
     width: 100%
     max-width: 66.071rem
@@ -85,4 +94,43 @@
       margin-left: -0.3rem
       margin-right: 0.7rem
       text-decoration: none
+.ymap-container
+  // position: relative
+  // overflow: hidden
+  // cursor: pointer
+  
+  // box-shadow: 0 0 2em  0 rgba(0, 0, 0, 0.2)
+  
+// .loader
+//   position: absolute
+//   z-index: 15
+//   top: -100%
+//   left: 0
+//   box-sizing: border-box
+//   width: 100%
+//   height: 100%
+//   overflow: hidden
+//   color: #000000
+//   transition: opacity 0.7s ease
+//   opacity: 0
+//   background-color: rgba(0, 0, 0, 0.55)
+//   &::after, &::before
+//     box-sizing: border-box
+//   &-default
+//     &::after
+//       position: absolute;
+//       top: calc(50% - 24px);
+//       left: calc(50% - 24px);
+//       width: 48px;
+//       height: 48px;
+//       content: '';
+//       animation: rotation 1s linear infinite;
+//       border: solid 8px #ffffff;
+//       border-left-color: transparent;
+//       border-radius: 50%
+// .loader.is-active 
+//   top: 0
+//   opacity: 1
+
+  
     
