--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -526,10 +526,13 @@
     &__map
       order: -2
       max-width: 28.333rem
+      height: 255px
       min-height: 21.25rem
       margin-bottom: 3.3rem
     &__menu
       display: none
+  .ymaps-2-1-76-map
+    height: 255px!important
   .contacts
     &-info
       &__text
