--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -2,13 +2,13 @@
   background: $dark url('../img/footer-bg.jpg') no-repeat center / cover
   padding-top: 3rem
   &__wrap
-    background-color: $black
     max-width: 63.071rem
     margin: auto
     padding: 2.5rem
     padding-top: 1.1rem
     margin-bottom: 3.55rem
     margin-top: -19rem
+    background: $black url('../img/modal-bg-lines.png') no-repeat center / cover
   &__title
     text-transform: uppercase
     font-family: 'Yeseva One', cursive
@@ -42,7 +42,6 @@
     flex-basis: 100%
     margin-bottom: 3.6rem
     font-weight: normal
-    // font-size: 1.142rem
   &__button
     margin: auto
     padding: 1.23rem 4.25rem
@@ -55,19 +54,15 @@
     flex-direction: column
     align-items: center
   &__map
-    // position: relative;
-    // z-index: 7;
-    // width: 100%;
-    // height: 100%;
-    // cursor: pointer;
-    // background-color: transparent;
-    background: url('../img/yandex-before-load-marker.png') #ffffff no-repeat
-    background-position: center center
-    background-size: cover
+    z-index: 100
     margin-bottom: 3.85rem
     width: 100%
+    height: 465px
     max-width: 66.071rem
     min-height: 33.214rem
+    background-color: transparent;
+    background: url('../img/yandex-before-load-marker.png') #ffffff no-repeat
+    background-position: center center
 .contacts
   &-info
     &__text
@@ -94,43 +89,5 @@
       margin-left: -0.3rem
       margin-right: 0.7rem
       text-decoration: none
-.ymap-container
-  // position: relative
-  // overflow: hidden
-  // cursor: pointer
-  
-  // box-shadow: 0 0 2em  0 rgba(0, 0, 0, 0.2)
-  
-// .loader
-//   position: absolute
-//   z-index: 15
-//   top: -100%
-//   left: 0
-//   box-sizing: border-box
-//   width: 100%
-//   height: 100%
-//   overflow: hidden
-//   color: #000000
-//   transition: opacity 0.7s ease
-//   opacity: 0
-//   background-color: rgba(0, 0, 0, 0.55)
-//   &::after, &::before
-//     box-sizing: border-box
-//   &-default
-//     &::after
-//       position: absolute;
-//       top: calc(50% - 24px);
-//       left: calc(50% - 24px);
-//       width: 48px;
-//       height: 48px;
-//       content: '';
-//       animation: rotation 1s linear infinite;
-//       border: solid 8px #ffffff;
-//       border-left-color: transparent;
-//       border-radius: 50%
-// .loader.is-active 
-//   top: 0
-//   opacity: 1
-
   
     
