--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -20,7 +20,7 @@
   &__dialog
     position: relative
     max-width: 36.143rem
-    background: $dark url('../img/bg-lines.svg') no-repeat center / cover
+    background: $dark url('../img/modal-bg-lines.png') no-repeat center / cover
     padding: 2.357rem 3.5rem 1.929rem 3.5rem
     color: $light
   &__close
