--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -4,6 +4,8 @@
   &__row
     max-width: 88.286rem
     margin-left: 0.9rem
+  &-bg-lines
+    background: $light url('../img/team-bg-lines.png') no-repeat center / cover
 .card
   &__text
     position: relative
@@ -42,5 +44,4 @@
       padding: 1.214rem 2.9rem
     &--md
       padding: 1.214rem 2.45rem
-
   
