refact: make bg-lines on design section

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -235,6 +235,8 @@
       margin-left: 0
   .design
     background: $black
+    &__section-title
+      margin-top: 0
     &__heading
       margin-bottom: 1.15rem
       color: $light
@@ -557,8 +559,8 @@
       &__text
         max-width: 27rem
         font-size: 1.5rem
-        line-height: 2.083rem
-        margin-bottom: 2rem
+        line-height: 2.1rem
+        margin-bottom: 1.85rem
       &__email 
         margin-left: 0.2rem
         margin-right: 1.55rem
