--- a/sass/templates/_design.sass
+++ b/sass/templates/_design.sass
@@ -1,7 +1,7 @@
 .design
   padding-bottom: 40rem
   position: relative
-  background: linear-gradient(to bottom, $light 34.5%, $dark 20%)
+  background: $dark url('../img/bg-lines.png') no-repeat center / cover
   // &::before
   //   content: ''
   //   position: absolute
@@ -14,6 +14,7 @@
     max-width: 88.286rem
     margin-left: 0.9rem
   &__section-title
+    margin-top: -37.8rem
     position: relative
   &__card
     position: relative
