--- a/css/style.css
+++ b/css/style.css
@@ -1073,6 +1073,10 @@ img {
   cursor: pointer;
 }
 
+.types {
+  padding-bottom: 47rem;
+}
+
 .types__section-title {
   margin-bottom: 2.15rem;
 }
@@ -1138,7 +1142,7 @@ img {
 .design {
   padding-bottom: 40rem;
   position: relative;
-  background: linear-gradient(to bottom, #ffffff 34.5%, #131313 20%);
+  background: #131313 url("../img/bg-lines.png") no-repeat center/cover;
 }
 
 .design__row {
@@ -1147,6 +1151,7 @@ img {
 }
 
 .design__section-title {
+  margin-top: -37.8rem;
   position: relative;
 }
 
@@ -1386,7 +1391,8 @@ img {
 
 .footer__menu {
   background-color: #131313;
-  padding: 4.286rem 0;
+  padding: 3.429rem 0;
+  max-height: 9.5rem;
 }
 
 .footer__info {
@@ -1397,7 +1403,7 @@ img {
 
 .footer__map {
   z-index: 100;
-  margin-bottom: 3.85rem;
+  margin-bottom: 4.7rem;
   width: 100%;
   height: 465px;
   max-width: 66.071rem;
@@ -1892,6 +1898,9 @@ img {
   .design {
     background: #181818;
   }
+  .design__section-title {
+    margin-top: 0;
+  }
   .design__heading {
     margin-bottom: 1.15rem;
     color: #ffffff;
@@ -2303,8 +2312,8 @@ img {
   .contacts-info__text {
     max-width: 27rem;
     font-size: 1.5rem;
-    line-height: 2.083rem;
-    margin-bottom: 2rem;
+    line-height: 2.1rem;
+    margin-bottom: 1.85rem;
   }
   .contacts-info__email {
     margin-left: 0.2rem;
