--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -48,14 +48,15 @@
     font-size: 1.071rem
   &__menu
     background-color: $dark
-    padding: 4.286rem 0
+    padding: 3.429rem 0
+    max-height: 9.5rem
   &__info
     display: flex
     flex-direction: column
     align-items: center
   &__map
     z-index: 100
-    margin-bottom: 3.85rem
+    margin-bottom: 4.7rem
     width: 100%
     height: 465px
     max-width: 66.071rem
