refact: refact button-up

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -26,6 +26,8 @@
         margin-bottom: 1.8rem
         &:last-of-type
           margin-bottom: 6rem
+  .button-up
+    margin-right: 1.5rem
 @media screen and ( min-width: 992px )
   .button
     &--primary
