--- a/css/style.css
+++ b/css/style.css
@@ -485,27 +485,19 @@ input.invalid {
   right: 0;
   bottom: 0;
   margin-right: 2rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 3.3rem;
   background-color: transparent;
   border: none;
-  font-family: 'Yeseva One', cursive;
-  font-size: 0.9rem;
-  text-transform: uppercase;
   text-decoration: none;
   cursor: pointer;
   outline: none;
   color: #E3B873;
-}
-
-.button-up::after {
-  content: '';
   background: url("../img/arrow-down.svg") no-repeat center;
   transform: rotate(180deg);
   width: 30px;
   height: 30px;
   border: 2px solid #E3B873;
   border-radius: 50%;
-  margin-left: 1rem;
 }
 
 ::-moz-placeholder, :-moz-placeholder {
@@ -1639,6 +1631,9 @@ img {
   }
   .swiper-slide__text:last-of-type {
     margin-bottom: 6rem;
+  }
+  .button-up {
+    margin-right: 1.5rem;
   }
 }
 
